# std.rs

./: .editorconfig  .gitignore  .prettierrc.yml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  webpack.config.js  wrangler.toml
.github/workflows/: ci.yml  test.yml
src/: handler.test.ts  handler.ts  index.ts  lib.rs  tests.rs
tests/: redirect.rs
worker/: worker.js
